--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -2,6 +2,7 @@
 add_executable(example
   window.cpp
   glew.c
+  vec2.cpp
   example.cpp)
 target_link_libraries(example
   glfw
@@ -11,6 +12,7 @@ add_dependencies(example glfw ${COPY_BINARY})
 
 # Build tests
 add_executable(tests
+vec2.cpp
   tests.cpp)
 target_link_libraries(tests
   ${GLFW_LIBRARIES})
